// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date picker Disabled renders correctly 1`] = `
<jest>
  <div
    class="ecl-datepicker"
  >
    <input
      autocomplete="off"
      class="ecl-datepicker__field ecl-text-input ecl-text-input--s"
      data-ecl-auto-init="Datepicker"
      data-ecl-datepicker-toggle=""
      disabled=""
      id="example-input-id-1"
      name="example-input-id-1"
      placeholder="DD-MM-YYYY"
      required=""
      type="text"
      value="03-10-2023"
    />
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--xs ecl-datepicker__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#calendar"
      />
    </svg>
  </div>
</jest>
`;

exports[`Date picker Invalid renders correctly 1`] = `
<jest>
  <div
    class="ecl-datepicker ecl-datepicker--invalid"
  >
    <input
      autocomplete="off"
      class="ecl-datepicker__field ecl-text-input ecl-text-input--s ecl-text-input--invalid"
      data-ecl-auto-init="Datepicker"
      data-ecl-datepicker-toggle=""
      id="example-input-id-1"
      name="example-input-id-1"
      placeholder="DD-MM-YYYY"
      required=""
      type="text"
      value="03-10-2023"
    />
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--xs ecl-datepicker__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#calendar"
      />
    </svg>
  </div>
</jest>
`;

exports[`Date picker Optional renders correctly 1`] = `
<jest>
  <div
    class="ecl-datepicker"
  >
    <input
      autocomplete="off"
      class="ecl-datepicker__field ecl-text-input ecl-text-input--s"
      data-ecl-auto-init="Datepicker"
      data-ecl-datepicker-toggle=""
      id="example-input-id-1"
      name="example-input-id-1"
      placeholder="DD-MM-YYYY"
      required=""
      type="text"
      value="03-10-2023"
    />
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--xs ecl-datepicker__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#calendar"
      />
    </svg>
  </div>
</jest>
`;

exports[`Date picker Optional renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-datepicker"
  >
    <input
      autocomplete="off"
      class="ecl-datepicker__field ecl-text-input ecl-text-input--s"
      data-ecl-auto-init="Datepicker"
      data-ecl-datepicker-toggle=""
      data-test="data-test-value"
      data-test-1="data-test-value-1"
      id="example-input-id-1"
      name="example-input-id-1"
      placeholder="DD-MM-YYYY"
      required=""
      type="text"
      value="03-10-2023"
    />
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--xs ecl-datepicker__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#calendar"
      />
    </svg>
  </div>
</jest>
`;

exports[`Date picker Optional renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-datepicker custom-class custom-class--test"
  >
    <input
      autocomplete="off"
      class="ecl-datepicker__field ecl-text-input ecl-text-input--s"
      data-ecl-auto-init="Datepicker"
      data-ecl-datepicker-toggle=""
      id="example-input-id-1"
      name="example-input-id-1"
      placeholder="DD-MM-YYYY"
      required=""
      type="text"
      value="03-10-2023"
    />
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--xs ecl-datepicker__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#calendar"
      />
    </svg>
  </div>
</jest>
`;

exports[`Date picker Optional renders correctly with extra group class names 1`] = `
<jest>
  <div
    class="ecl-datepicker"
  >
    <input
      autocomplete="off"
      class="ecl-datepicker__field ecl-text-input ecl-text-input--s"
      data-ecl-auto-init="Datepicker"
      data-ecl-datepicker-toggle=""
      id="example-input-id-1"
      name="example-input-id-1"
      placeholder="DD-MM-YYYY"
      required=""
      type="text"
      value="03-10-2023"
    />
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--xs ecl-datepicker__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#calendar"
      />
    </svg>
  </div>
</jest>
`;

exports[`Date picker Optional renders correctly with extra label class names 1`] = `
<jest>
  <div
    class="ecl-datepicker"
  >
    <input
      autocomplete="off"
      class="ecl-datepicker__field ecl-text-input ecl-text-input--s"
      data-ecl-auto-init="Datepicker"
      data-ecl-datepicker-toggle=""
      id="example-input-id-1"
      name="example-input-id-1"
      placeholder="DD-MM-YYYY"
      required=""
      type="text"
      value="03-10-2023"
    />
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--xs ecl-datepicker__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#calendar"
      />
    </svg>
  </div>
</jest>
`;

exports[`Date picker Required renders correctly 1`] = `
<jest>
  <div
    class="ecl-datepicker"
  >
    <input
      autocomplete="off"
      class="ecl-datepicker__field ecl-text-input ecl-text-input--s"
      data-ecl-auto-init="Datepicker"
      data-ecl-datepicker-toggle=""
      id="example-input-id-1"
      name="example-input-id-1"
      placeholder="DD-MM-YYYY"
      required=""
      type="text"
      value="03-10-2023"
    />
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--xs ecl-datepicker__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#calendar"
      />
    </svg>
  </div>
</jest>
`;
